--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <script defer href="build/bundle.js"></script> -->
+    <script defer href="build/bundle.js"></script>
     <title>Favorite Things</title>
     
 </head>
